Add cgltf. Add GLTFReader.

--- a/nucleus/CMakeLists.txt
+++ b/nucleus/CMakeLists.txt
@@ -96,6 +96,9 @@ qt_add_library(nucleus STATIC
     timing/TimerManager.h timing/TimerManager.cpp
     timing/TimerInterface.h timing/TimerInterface.cpp
     timing/CpuTimer.h timing/CpuTimer.cpp
+    tile_scheduler/alpinite/GLTFReader.h
+    tile_scheduler/alpinite/GLTFReader.cpp
+    tile_scheduler/alpinite/cgltf.h tile_scheduler/alpinite/cgltf_write.h
 )
 
 target_include_directories(nucleus PRIVATE . PUBLIC ${CMAKE_SOURCE_DIR})
